data/objects/Invoice_CEN__c.object
<CustomObject>
    <fields>
        <fullName>Applied_Amount__c</fullName>
        <label>Applied Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Payment_Date__c</fullName>
        <label>Applied Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_Month__c</fullName>
        <description>Date of the Bill Month</description>
        <label>Bill Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Wizard__c</fullName>
        <label>Billing Wizard</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRGBIInvoiceid__c</fullName>
        <externalId>true</externalId>
        <label>CRGBIInvoiceid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Amount__c</fullName>
        <label>Contract Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract_CEN__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Total__c</fullName>
        <label>Credit Total</label>
        <summarizedField>Invoice_Item_CEN__c.Credit__c</summarizedField>
        <summaryForeignKey>Invoice_Item_CEN__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customerid__c</fullName>
        <description>Vendor ID / Customer ID / Accounting ID</description>
        <label>Customerid</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_End_Date__c</fullName>
        <description>Invoice Billing End Date</description>
        <label>Cycle End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>D365Contractid__c</fullName>
        <externalId>true</externalId>
        <label>D365Contractid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D365EnergyProgramid__c</fullName>
        <externalId>true</externalId>
        <label>D365EnergyProgramid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <label>Date Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                    <default>true</default>
                    <label>Invoice</label>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Debit Memo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Energy Program</label>
        <referenceTo>Energy_Program__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Generated_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Generated External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Intacct_State__c</fullName>
        <label>Intacct State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intacct_Status__c</fullName>
        <label>Intacct Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Reversal</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
                <value>
                    <fullName>No Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_ID__c</fullName>
        <label>Invoice ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Name_TK__c</fullName>
        <description>Intacct Invoice Name (description or description2 fields to be used an an external id)</description>
        <externalId>true</externalId>
        <label>Invoice Name TK</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Name__c</fullName>
        <label>Invoice Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Total_Rollup__c</fullName>
        <description>Rollup Invoice Item total</description>
        <label>Invoice Total (RU)</label>
        <summarizedField>Invoice_Item_CEN__c.Fee_Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Item_CEN__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Total__c</fullName>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_ID__c</fullName>
        <description>Item ID from Intacct</description>
        <label>Item ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Source__c</fullName>
        <label>Legacy Source</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ready_For_Billing__c</fullName>
        <label>Ready For Billing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Run_Reconciliation__c</fullName>
        <label>Run Reconciliation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <description>Invoice Billing Start Date</description>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_Contract_ID__c</fullName>
        <formula>Customerid__c +  TEXT(Contract__r.Contract_Start_Date__c)</formula>
        <label>Unique Contract ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Invoice_Id__c</fullName>
        <formula>Unique_Contract_ID__c  &amp; &apos;-&apos; &amp; TEXT(YEAR(Bill_Month__c)) &amp; &apos;-&apos; &amp; 
RIGHT(&apos;0&apos; &amp; TEXT(MONTH(Bill_Month__c)), 2) &amp; &apos;-&apos; &amp; 
RIGHT(&apos;0&apos; &amp; TEXT(DAY(Bill_Month__c)), 2) &amp; &apos;-&apos; &amp;  Invoice_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Invoice Id</label>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unique_Invoice_Id__c</columns>
        <columns>Generated_External_ID__c</columns>
        <columns>Invoice_ID__c</columns>
        <columns>Invoice_Name__c</columns>
        <columns>Contract__c</columns>
        <columns>Energy_Program__c</columns>
        <columns>Invoice_Total__c</columns>
        <columns>Applied_Amount__c</columns>
        <columns>Applied_Payment_Date__c</columns>
        <columns>Bill_Month__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Intacct_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_ID__c</field>
            <operation>equals</operation>
            <value>FF3094</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>